--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<<<<<<< HEAD
-@@ -1,6 +1,7 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 =======
 <!DOCTYPE html>
   
@@ -9,7 +7,6 @@
   <head>
       <meta charset="UTF-8">
   
- @@ -15,36 +16,28 @@
       <link href="assets/css/style.css" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-2.2.1.min.js">
       </script>
@@ -54,7 +51,7 @@
                           deals!</strong>
                           </h3>
                       </div>
- @@ -76,41 +69,44 @@ <h3 class="panel-title"><strong>Search for booze
+                      <h3 class="panel-title"><strong>Search for booze
                                   "form-control" id="zipInput" type="number">
                               </div>
                               
@@ -127,7 +124,6 @@
   <head>
       <meta charset="UTF-8">
   
- @@ -15,36 +16,28 @@
       <link href="assets/css/style.css" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-2.2.1.min.js">
       </script>
@@ -172,7 +168,7 @@
                           deals!</strong>
                           </h3>
                       </div>
- @@ -76,41 +69,44 @@ <h3 class="panel-title"><strong>Search for booze
+                      <h3 class="panel-title"><strong>Search for booze
                                   "form-control" id="zipInput" type="number">
                               </div>
                               
