--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                                 <label for="zipInput">Zip Code</label> <input class=
                                 "form-control" id="zipInput" type="number">
                             </div>
+
+                             <div class="form-group">
+                                <label for="radiusInput">Radius (mi)</label> <input class=
+                                "form-control" id="radiusInput" type="number">
+                            </div>
                             
                             <div id="searchButtonDiv">
                                 <button id="searchButton" class="btn btn-primary" type="submit"><img src="assets/images/beerbottle.png" alt="Search"></button>
@@ -87,7 +92,7 @@
 
                         <div class="panel-body">
                             <table class="table table-hover">
-                                <tbody>
+                                <tbody id="resultsView">
                                 </tbody>
                             </table>
                         </div>
