--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                     <div class="panel-body">
                         <!-- Entry Form -->
-                        <form>
+                        <form method="post">
                             <div class="form-group">
                                 <label for="addressInput">Street Address</label>
                                 <input class="form-control" id="addressInput"
@@ -75,7 +75,7 @@
                             </div>
                             
                             <div id="searchButtonDiv">
-                                <button id="searchButton" class="btn btn-primary" type="submit"><img src="assets/images/beerbottle.png" alt="Search"></button>
+                                <button href='#' id="searchButton" class="btn btn-primary" type="button"><img src="assets/images/beerbottle.png" alt="Search"></button>
                             </div>
                         </form>
                     </div>
@@ -112,7 +112,7 @@
     <!-- Javascript -->
     <script src="assets/javascript/main.js">
     </script>
-    <script src="assets/javascript/map.js">
+    <!-- <script src="assets/javascript/map.js"> -->
     </script>
     <script src="assets/javascript/sqoot.js">
     </script>
