--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>BoozR</title>
 
-    <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS; JS libraries -->
     <link crossorigin="anonymous" href=
     "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     integrity=
@@ -18,6 +18,7 @@
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
     </script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAVfTTAXPcbwzadCTdms_52C44KwdYUJe0"></script>
 
 </head>
 
@@ -68,6 +69,11 @@
                                 <label for="zipInput">Zip Code</label> <input class=
                                 "form-control" id="zipInput" type="number">
                             </div>
+
+                            <div class="form-group">
+                                <label for="radiusInput">Radius (in miles)</label> <input class=
+                                "form-control" id="radiusInput" type="number">
+                            </div>
                             
                             <div id="searchButtonDiv">
                                 <button id="searchButton" class="btn btn-primary" type="submit"><img src="assets/images/beerbottle.png" alt="Search"></button>
@@ -77,15 +83,14 @@
                 </div>
 
                 <!-- Search Results -->
-                <div id="searchResults">
+                <div id="resultsView">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title"><strong>Search Results</strong>
                             </h3>
                         </div>
 
-
-                        <div class="panel-body">
+                        <div class="panel-body">Search results table goes here
                             <table class="table table-hover">
                                 <tbody>
                                 </tbody>
@@ -96,12 +101,17 @@
 
                 <!-- Map of results -->
                 <div id="resultsMap">
-                    <div class="panel-body">Map goes here</div>
+                    <div class="panel-body"></div>
                 </div>
 
             </div>
         </div>
-        <div id="footer">Copyright 2016 Team Jonas Brothers</div>
+
+            <div id="returnButtonDiv">
+                <button id="returnButton" class="btn btn-primary" type="submit">Return to search form</button>
+            </div>
+
+            <div id="footer">Copyright 2016 Team Jonas Brothers</div>
     </div>
 
     <!-- Javascript -->
@@ -111,5 +121,6 @@
     </script>
     <script src="assets/javascript/sqoot.js">
     </script>
+
 </body>
 </html>
