--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/map.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.1.min.js">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
     </script>
-
+    <link rel="stylesheet" type="text/css" href="findBars.css">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
 </head>
 
 <body id="mainPage">
@@ -99,17 +102,57 @@
                     </div>
                 </div>        
 
-                <!-- Map of results -->
-                <div id="resultsMap">
-                    <div class="panel-body">Map goes here</div>
-                </div>
+                <table>  
+                    <div id="findbar">Find Bars in:</div>
 
+                    <div id="locationField">
+                        <input id="autocomplete" placeholder="Enter a city" type="text" />
+                    </div>
+
+                    <div id="map"></div>
+
+                    <div id="listing">
+                        <table id="resultsTable">
+                        <tbody id="results"></tbody>
+                        </table>
+                    </div>
+
+                    <div style="display: none">
+                    <div id="info-content">
+                    <table>
+                    <tr id="iw-url-row" class="iw_table_row">
+                    <td id="iw-icon" class="iw_table_icon"></td>
+                    <td id="iw-url"></td>
+                    </tr>
+                    <tr id="iw-address-row" class="iw_table_row">
+                    <td class="iw_attribute_name">Address:</td>
+                    <td id="iw-address"></td>
+                    </tr>
+                    <tr id="iw-phone-row" class="iw_table_row">
+                    <td class="iw_attribute_name">Telephone:</td>
+                    <td id="iw-phone"></td>
+                    </tr>
+                    <tr id="iw-rating-row" class="iw_table_row">
+                    <td class="iw_attribute_name">Rating:</td>
+                    <td id="iw-rating"></td>
+                    </tr>
+                    <tr id="iw-website-row" class="iw_table_row">
+                    <td class="iw_attribute_name">Website:</td>
+                    <td id="iw-website"></td>
+                    </tr>
+                </table>
+            </div>
+            </div>
             </div>
         </div>
         <div id="footer">Copyright 2016 Team Jonas Brothers</div>
     </div>
 
     <!-- Javascript -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-fgz-LWMuaeK-Dr-UODE8hlM6tdsCMJg&libraries=places&callback=initMap"
+        async defer></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="findBars.js"></script>
     <script src="assets/javascript/main.js">
     </script>
     <script src="assets/javascript/map.js">
